@@ -74,7 +74,8 @@ enum {
     WM_TUNER_SCAN_PROGRESS,
     WM_TUNER_SCAN_END,
     WM_TUNER_STATS,
-    WM_TUNER_NEW_CHANNEL
+    WM_TUNER_NEW_CHANNEL,
+    WM_DVB_EIT_DATA_READY
 };
 
 enum ControlType {
